Add TestFX and basic integration tests (#314)
* Add TestFX and basic integration tests

* more ui tests

* add emoji test